// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButtonField should render checkbox item 1`] = `
<Field
  blank={Object {}}
  component={[Function]}
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  item={
    Object {
      "type": "checkbox",
    }
  }
  label="Checkbox"
  tooltipHelp={null}
/>
`;

exports[`TextButtonField should render select item with custom blank opt 1`] = `
<Field
  blank={
    Object {
      "label": "Bare Metal",
      "value": "bareMetal",
    }
  }
  component={[Function]}
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  item={
    Object {
      "selection": Array [
        Object {
          "label": "A",
          "value": "a",
        },
        Object {
          "label": "B",
          "value": "b",
        },
        Object {
          "label": "C",
          "value": "c",
        },
      ],
      "type": "select",
    }
  }
  label="Select"
  tooltipHelp={null}
/>
`;

exports[`TextButtonField should render text field without field selector 1`] = `
<Field
  blank={Object {}}
  component={[Function]}
  disabled={false}
  fieldRequired={false}
  item={Object {}}
  label="Text field"
  tooltipHelp={null}
/>
`;

exports[`TextButtonField should render text item 1`] = `
<Field
  blank={Object {}}
  component={[Function]}
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  item={
    Object {
      "type": "text",
    }
  }
  label="Text"
  tooltipHelp={null}
/>
`;
